infra/k8s-apl/bff/base/deployment.yml
#################################
# Deployment (BFF Application Server)
#################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bff-ap
  namespace: dummy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bff-ap
  minReadySeconds: 0
  progressDeadlineSeconds: 600
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
  template:
    metadata:
      name: bff-ap
      labels:
        app: bff-ap
    spec:
      containers:
        - name: bff-ap
          image: t3goto/bff-ap:latest
          resources:
            requests:
              cpu: 10m
              memory: 10Mi
            limits:
              cpu: 150m
              memory: 150Mi
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9001
          readinessProbe:
            httpGet:
              path: /api/v1/health/readiness
              port: 9001
            initialDelaySeconds: 0
            periodSeconds: 15
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 10
          livenessProbe:
            exec:
              command: ["ls","/usr/local/bin/node"]
            initialDelaySeconds: 0
            periodSeconds: 5
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 10
          startupProbe:
            httpGet:
              path: /api/v1/health/readiness
              port: 9001
            initialDelaySeconds: 0
            periodSeconds: 3
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 100
